@@ -10,7 +10,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -59,9 +58,12 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             Arrays.stream(rolesStr.split(","))
                 .map(String::trim)
                 .filter(StringUtils::hasText)
-                .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .map(
+                    role ->
+                        (GrantedAuthority)
+                            new SimpleGrantedAuthority(
+                                role.startsWith("ROLE_") ? role : "ROLE_" + role))
+                .toList();
       }
 
       if (StringUtils.hasText(subject)) {
